--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node proxyServer.js & node server.js",
+    "start": "node proxyServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
